Revision history for Perl extension IO::Pager.

0.21	
	Fixed bug #74691, tests fail if CPANTS folk don't have a perl in PATH!

	Add PID method & token overload to access pager process identifier.

0.20	Sat Feb 11 2012

	Fixed bug #74691, add File::Which as dependency / skip test if missing

	Fixed non-TTY/redirection behavior and added corresponding test

	Improve buffering sistuation in both ::Buffered and ::Unbuffered

	Auto-gensym scalar filehandles like perl's open

	Add OO interface

	Add alternate pagers 'lv', 'pg',
	and system default '/etc/alternatives/pager' (bug# 74519)

	Add tests for initialization failure conditions (9-open.t)

0.16	Fri Feb 3 2012

	Require 5.8.0 or better

	Removed Perl warning 'Use of tie on a handle without * is deprecated'.

	No interactive questions during 'make test' (bug# 66718)

	Better handling of missing PAGER.

	Look for more pagers: 'most' and 'w3m' (bug# 74519)

	Documentation clean-up, light refactoring, more error checks.

	Do not run IO::Pager::Page automatically when in Perl compile mode.

0.10	Unreleased

	Added support for encodings via binmode() (bug# 67930).

	Test: encoding, handle (glob, scalar, OO), interactive...

0.07	Unreleased

	Rewrote to support scalar filehandles per user request and IO::Handle
	style OO support came along for the ride.

	Fixed several mis-coded segments that did not affect operation.

	Added C<tell> in IO::Pager::Unbuffered to check size of buffered output.

	Pager open error now sets $! instead of issuing a warning, to more
	closely emulate the C<open> experience. Check return value as before.

	Neglected to update $VERSION in last release.

	Touched up the documentation.

0.06	Wed Sep 21 2005

	Fixed a stupid leftover using =~ for assignment that some perls ignored
	(bug# 14692).

	Fixed other nits in t.pl and documentation.

0.05	Thu Jul 17 20:01:55 EDT 2003

	Touched up documentation.

	Added IO::Pager::Page, a clone of IO::Page "Broken pipe" foible and all.
